--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,73 @@
+# ===================
 # Dependencies
-/node_modules/
-/vendor/
-_docs/.obsidian/
+# ===================
+node_modules/
+vendor/
 
-# Composer
+# ===================
+# Documentation
+# ===================
+# Obsidian vault settings (used locally for _docs)
+.obsidian/
+
+# ===================
+# Build & Composer
+# ===================
 composer.phar
-
-# Build outputs (optional - uncomment if you don't want to commit minified CSS)
+# Uncomment if you don't want to commit minified CSS
 # style.min.css
 
+# ===================
 # Logs
+# ===================
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# OS files
+# ===================
+# OS Generated Files
+# ===================
 .DS_Store
+.DS_Store?
+._*
 Thumbs.db
+ehthumbs.db
 desktop.ini
 
-# IDE/Editor
+# ===================
+# IDE / Editor
+# ===================
 .vscode/*
 !.vscode/settings.json
 !.vscode/extensions.json
-_docs/.obsidian/
+!.vscode/launch.json
 .idea/
 *.sublime-project
 *.sublime-workspace
+*.swp
+*.swo
+*~
 
-# Local environment
+# ===================
+# Environment
+# ===================
 .env
 .env.local
+.env.*.local
 *.local
 
-# Temporary files
+# ===================
+# Temporary Files
+# ===================
 *.tmp
 *.temp
 *.cache
+*.bak
 
-# WordPress specific
+# ===================
+# WordPress Specific
+# ===================
 *.sql
 *.sql.gz
+debug.log
